--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -62,7 +62,9 @@ a {
     background-color: @background;
     .navbar-toggle {
         color: white;
-        font-size: 16px;
+        font-size: 18px;
+        padding: 12px 16px;
+        margin: 0px;
         &:focus,
         &:active {
             outline: none;
@@ -132,8 +134,13 @@ a {
     font-family: "Maven Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: fade(white, 20%);
     text-transform: uppercase;
-    padding: 16px 16px;
+    padding: 14px 14px;
     font-size: 16px;
+    @media(min-width:768px) {
+        &.top-nav-collapse {
+            padding: 18px 18px;
+        }
+    }
 }
 
 .intro {
